--- a/css/temp5.css
+++ b/css/temp5.css
@@ -1,123 +1,238 @@
- #header {
-     padding: 9px 0px;
-     /* height: 66px; */
-     background: #044863;
-     position: fixed;
-     top: 0;
-     right: 0;
-     left: 0;
-     z-index: 1000;
- }
- 
- .icon-search {
-     font-size: 20px;
-     padding-top: 12px;
- }
- 
- .box-search {
-     /* box-shadow: 0 0 6px 1px rgb(0 0 0 / 10%); */
- }
- 
- #sidebar-menu ul li a {
-     display: block;
-     position: relative;
-     color: #fff;
-     /* background: #2a2f33; */
-     text-decoration: none;
-     padding: 15px 30px;
-     font-family: Sawarabi Mincho, sans-serif;
- }
- /* ============content============= */
- 
- #content {
-     background-color: #edeff0;
- }
- 
- .wp-sidebar {
-     background: #2a2f33;
-     padding: 0px !important;
- }
- 
- #sidebar-menu ul li {
-     border-bottom: 1px solid hsla(0, 0%, 100%, 0.03);
- }
- 
- .carousel-indicators li {
-     width: 14px;
-     height: 14px;
-     background: #fff;
-     border: 3px solid #fff;
-     border-radius: 50%;
-     outline: 0;
-     margin: 0 4px
- }
- 
- .carousel-indicators {
-     bottom: -43px !important;
-     right: -160px;
-     display: flex;
-     justify-content: flex-end;
- }
- 
- .carousel-indicators .active {
-     opacity: 1 !important;
-     background-color: #5b4282 !important;
- }
- 
- .wp-view {
-     background: rgb(15, 179, 243);
-     width: 47px;
-     padding: 10px;
-     padding: 4px;
-     color: #fff;
-     position: absolute;
-     top: 0;
-     right: 6px;
-     font-weight: 600;
- }
- 
- .wp-view::after {
-     border-right: 10px solid transparent;
-     border-top: 7px solid rgba(0, 0, 0, .5);
-     bottom: -7px;
-     right: 0;
-     content: "";
-     position: absolute;
- }
- 
- .item-title {
-     font-size: 14px;
-     font-weight: 700;
-     color: #2d2d2d;
- }
- 
- .item-text {
-     color: #777;
-     font-size: 14px;
- }
- 
- .lg:after {
-     display: block;
-     content: "";
-     position: absolute;
-     left: 0;
-     bottom: 0;
-     width: 100%;
-     height: 2px;
-     background: #e1493e
- }
- 
- .lg {
-     position: relative;
-     white-space: nowrap;
-     font-size: 30px;
-     color: #2d2d2d;
-     font-weight: 500;
-     text-transform: capitalize;
-     padding-bottom: 5px;
-     margin-bottom: 5px;
- }
- 
- .ranking-images {
-     background-image: url(./images/card.png);
- }
+#header {
+    padding: 9px 0px;
+    /* height: 66px; */
+    background: #044863;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1000;
+}
+
+.icon-search {
+    font-size: 20px;
+    padding-top: 12px;
+}
+
+.box-search {
+    /* box-shadow: 0 0 6px 1px rgb(0 0 0 / 10%); */
+}
+
+#sidebar-menu ul li a {
+    display: block;
+    position: relative;
+    color: #fff;
+    /* background: #2a2f33; */
+    text-decoration: none;
+    padding: 15px 30px;
+    font-family: Sawarabi Mincho, sans-serif;
+}
+
+
+/* ============content============= */
+
+#content {
+    background-color: #edeff0;
+}
+
+.wp-sidebar {
+    background: #2a2f33;
+    padding: 0px !important;
+}
+
+#sidebar-menu ul li {
+    border-bottom: 1px solid hsla(0, 0%, 100%, 0.03);
+}
+
+.carousel-indicators li {
+    width: 14px;
+    height: 14px;
+    background: #fff;
+    border: 3px solid #fff;
+    border-radius: 50%;
+    outline: 0;
+    margin: 0 4px
+}
+
+.carousel-indicators {
+    bottom: -43px !important;
+    right: -160px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.carousel-indicators .active {
+    opacity: 1 !important;
+    background-color: #5b4282 !important;
+}
+
+.pb-sub {
+    padding: 0px 10px 0px 0px;
+    position: relative;
+}
+
+.wp-view {
+    background: rgb(15, 179, 243);
+    width: 47px;
+    padding: 10px;
+    padding: 4px;
+    color: #fff;
+    position: absolute;
+    top: 0;
+    right: 1px;
+    font-weight: 600;
+}
+
+.wp-view::after {
+    border-right: 10px solid transparent;
+    border-top: 7px solid rgba(0, 0, 0, .5);
+    bottom: -7px;
+    right: 0;
+    content: "";
+    position: absolute;
+}
+
+.wp-view-card {
+    background: rgb(15, 179, 243);
+    width: 47px;
+    padding: 10px;
+    padding: 4px;
+    color: #fff;
+    position: absolute;
+    top: 235px;
+    right: 6px;
+    font-weight: 600;
+}
+
+.wp-view-card::after {
+    border-right: 10px solid transparent;
+    border-top: 7px solid rgba(0, 0, 0, .5);
+    bottom: -7px;
+    right: 0;
+    content: "";
+    position: absolute;
+}
+
+.wp-view-ranking {
+    background: rgb(15, 179, 243);
+    width: 47px;
+    padding: 10px;
+    padding: 4px;
+    color: #fff;
+    position: absolute;
+    top: 0px;
+    right: -9px;
+    font-weight: 600;
+}
+
+.wp-view-ranking::after {
+    border-right: 10px solid transparent;
+    border-top: 7px solid rgba(0, 0, 0, .5);
+    bottom: -7px;
+    right: 0;
+    content: "";
+    position: absolute;
+}
+
+.site-name {
+    font-size: 13px;
+    color: #777;
+    display: flex;
+    justify-content: space-around;
+}
+
+.item-title {
+    font-size: 14px;
+    font-weight: 700;
+    color: #2d2d2d;
+}
+
+.item-text {
+    color: #777;
+    font-size: 14px;
+}
+
+.lg:after {
+    display: block;
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background: #e1493e
+}
+
+.lg {
+    position: relative;
+    white-space: nowrap;
+    font-size: 30px;
+    color: #2d2d2d;
+    font-weight: 500;
+    text-transform: capitalize;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+}
+
+
+/* .ranking-images {
+    background-image: url(./images/card.png);
+} */
+
+.img-text {
+    position: absolute;
+    bottom: 5px;
+    color: #fff;
+    left: 6px;
+}
+
+.view-all {
+    color: #fff;
+    background-color: #0fb3f3;
+    border-color: #0fb3f3;
+    margin-left: 20px;
+    font-weight: 500;
+}
+
+.icon-view-all {
+    background: #fff;
+    color: #0fb3f3;
+    padding: 0px 4px 0px 5px;
+    border-radius: 50%;
+    font-size: 12px;
+}
+
+.box-copyright {
+    color: #222;
+    background: #fff;
+    text-align: center;
+    border-top: 1px solid #e9e9e9;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 25px 0;
+}
+
+#back-top {
+    right: 15px;
+    bottom: 20px;
+    padding: 10px 18px;
+    z-index: 100;
+    display: none;
+}
+
+#sidebar-menu {
+    height: 100%;
+    /* width: 160px; */
+    position: fixed;
+    z-index: 1;
+    top: 58px;
+    /* left: 2px; */
+    /* background-color: #111; */
+    overflow-x: hidden;
+    padding-top: 20px;
+    width: 16.666667%;
+}
+
+#sidebar-menu::-webkit-scrollbar {
+    display: none;
+}
